--- a/app/src/main/res/layout/package_card.xml
+++ b/app/src/main/res/layout/package_card.xml
@@ -31,6 +31,13 @@
                 android:textSize="30sp" />
 
             <TextView
+                android:id="@+id/currentCoins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textStyle="italic" />
+
+            <TextView
                 android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
