--- a/app/src/main/res/layout/ad_view.xml
+++ b/app/src/main/res/layout/ad_view.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        ads:adSize="BANNER"
+        ads:adSize="SMART_BANNER"
         ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
 
 </LinearLayout>
