--- a/app/src/main/res/layout/activity_slotmachine.xml
+++ b/app/src/main/res/layout/activity_slotmachine.xml
@@ -56,4 +56,9 @@
         android:layout_marginTop="50dp"
         android:text="@string/spin" />
 
+    <com.appodeal.ads.BannerView
+        android:id="@+id/appodealBannerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
