--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,6 +13,11 @@
     android:orientation="vertical"
     tools:context=".activities.impl.SettingsActivity">
 
+    <com.appodeal.ads.BannerView
+        android:id="@+id/appodealBannerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -377,7 +382,6 @@
 
 
             </RelativeLayout>
-
 
         </LinearLayout>
 
