--- a/app/src/main/res/layout/activity_intro_slide.xml
+++ b/app/src/main/res/layout/activity_intro_slide.xml
@@ -32,6 +32,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
+        android:id="@+id/introSliderContainer"
         android:padding="16dp">
 
         <com.google.android.material.card.MaterialCardView
