--- a/app/src/main/res/layout/activity_spin_the_wheel.xml
+++ b/app/src/main/res/layout/activity_spin_the_wheel.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".activities.impl.games.SpinTheWheelActivity">
 
@@ -15,6 +16,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
+        android:fitsSystemWindows="true"
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
