--- a/app/src/main/res/layout/activity_purchase.xml
+++ b/app/src/main/res/layout/activity_purchase.xml
@@ -69,6 +69,7 @@
                 android:minHeight="48dp" />
 
             <Button
+                android:id="@+id/redeem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
